@@ -60,7 +60,7 @@ sub process {
 		$self->center->comp_path($puzzle->cfg->login);
 		$self->center->process_as_login;
 	}
-	if ($puzzle->cfg->cornice && 
+	if ($puzzle->cfg->frames && 
 		$puzzle->args->print ne '1' && $puzzle->cfg->base) {
 		foreach (qw/top left right bottom/) {
 			if ($puzzle->cfg->{"frame_${_}_file"} ne '') {
